mongodb.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      #hostNetwork: true
      containers:
      - name: mongodb
        imagePullPolicy: Always
        image: mongo:5.0.6
        ports:
        - containerPort: 27017
