aws-alb-ingress.yaml
# AWS ALB Ingress YAML file for Wavelengt Zone (EKS)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ant-media-server-origin
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:142315010245:certificate/9756d591-5d35-4269-80db
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true
spec:
  ingressClassName: alb
  rules:
  - host: origin.antmedia.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ant-media-server-origin
            port:
              number: 5080
  tls:
    - hosts:
      - origin.antmedia.cloud
